Book page spacing made consistent, fixed book page link cards border in dark mode, footer content modifications in size and width

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -117,6 +117,7 @@ i {
 
 .dark-theme .card {
     background-color: black;
+    border: 1px solid rgba(255, 255, 255, 0.125);
 }
 
 .dark-theme .bg-light {
